--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode=development",
     "start": "webpack-dev-server --open --mode=development",
     "lint": "eslint src/*.js",
-    "test": "jest"
+    "test": "jest --colors --coverage"
   },
   "keywords": [],
   "author": "",
